# high-res-stereo

./: .gitignore  CMakeLists.txt  calculate_disparity.py  calculate_disparity_script_model.py  create_model_script.py  create_traced_model_script.py  export_onnx_model.py  highres-stereo.cpp  model_data_parallel_to_not_data_parallel.py  submission.py  trace_model.py  train.py  visualize_model.py
cpp/: CMakeLists.txt  high_res_stereo.cpp  high_res_stereo.hpp  high_res_stereo_fixed_size.cpp  high_res_stereo_fixed_size.hpp  main.cpp  ml_torch_stereo_matcher.hpp  utils.cpp  utils.hpp
models/: hsm.py  submodule.py  utils.py
utils/: inference.py  model.py
